# multiagent-analyst

./: README.md  claude.md  skills-lock.json
backend/: .gitignore  main.py  pipeline.py  pipeline_output.txt  pyproject.toml  sample.py  sample_sales.csv
backend/agents/: agent_1.py  agent_2.py  agent_3.py  agent_4.py  agent_5.py  agent_6.py
backend/outputs/: cleaned_data.csv
backend/tests/: test_agent1.py  test_agent2_chunking.py  test_agent3_currency_parsing.py  test_agent4_chart_overwrite.py  test_agent4_trend_selection.py  test_dedup_consistency.py  test_pipeline_diagnostics.py  test_preprocessing_improvements.py
files_improvement_/: AGENT_IMPROVEMENTS_CODE.md  IMPLEMENTATION_CHECKLIST.md  PREPROCESSING_IMPROVEMENTS.md  REAL_WORLD_SCENARIOS.md  agent_1_implementation_plan.md  agent_2_implementation_plan.md  agent_3_implementation_plan.md  deployment_guide.md  quick_reference.md  testing_and_validation_plan.md
presentation/: .gitignore  main_proposal_presentation.tex
presentation/src/images/: README.md
presentation/src/slides/: 01-title.tex  02-motivation.tex  03-background.tex  04-llm-architecture.tex  04-problem-statement.tex  05-objectives.tex  06-scope.tex  07-originality.tex  08-applications.tex  09-literature-review.tex  10-methodology.tex  11-expected-outcome.tex  11-results.tex  12-discussion.tex  13-future-enhancements.tex  14-conclusion.tex  15-timeline.tex  16-references.tex
reportfolder/: report.aux  report.fdb_latexmk  report.fls  report.lof  report.lot  report.out  report.tex  report.toc
