[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "groq>=1.5.0",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.0.0",
    "numpy",
    "scipy",
    "matplotlib",
    "jinja2>=3.1.0",
    "weasyprint>=69.0",
]
